# vanta

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
src/: args.rs  constants.rs  download.rs  helpers.rs  main.rs
src/download/: dl_helpers.rs  dl_types.rs  mod.rs
src/launch/: lc_types.rs  mod.rs
src/ms_auth/: mod.rs  ms_helpers.rs  types.rs
vanta/: __init__.py  mll_callbacks.py  style.py
vanta-old/: __main__.py  dirs.py  mll_callbacks.py
vanta-old/instance/: __init__.py
vanta-old/instance/loaders/: __init__.py
vanta-old/instance/modrinth/: __init__.py
vanta/instance/: __init__.py  util.py
vanta/instance/loaders/: __init__.py
vanta/instance/modrinth/: __init__.py
vanta/user/: __init__.py  skin.py
