[package]
name = "vanta"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bincode = { version = "2.0.1"}
clap = { version = "4.5.42", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
open = "5.3.2"
platform-dirs = "0.3.0"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
threadpool = "1.8.1"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
