[project]
name = "vanta"
version = "0.1.0"
description = "A CLI Minecraft Launcher for advanced instance management while still keeping things simple."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "minecraft-launcher-lib>=7.1",
    "platformdirs>=4.3.8",
    "typer>=0.16.0",
]

[project.scripts]
vanta = 'vanta.__main__:app'
